
   - Extensions to the energy models:  1) a new Rakhmatov Vrudhula 
     non-linear battery model, 2) additional support for modeling 
     energy consumption in WiFi devices, 3) an example for how to add 
     energy models to a WiFi-based simulation (in examples/energy/ 
     directory).

   - New methods to print IPv4 routing tables to an output stream.

   - Energy support for UAN module and Li-Ion energy model.
     Now each network node can have an associated energy source
     from which it consumes energy. The user can specify a custom
     energy model for the underwater transducer, with default values
     set for WHOI acoustic transducer. Li-Ion battery model added
     into energy models folder.

   - Destination-Sequenced Distance Vector (DSDV) routing protocol 
     is a proactive, table-driven routing protocol for MANETs 
     developed by Charles E. Perkins and Pravin Bhagwat in 1994. 
     This implementation is for IPv4 routing and was contributed 
     by ResilNets Research Group.

Bugs fixed
----------
The following lists many of the bugs fixed or small feature additions
since ns-3.9, in many cases referencing the Bugzilla bug number

   - bug 978 - Consolidate Wi-Fi MAC high functionality
   - bug 852 - Add support for 802.11g devices
   - bug 892 - WaypointMobilityModel incompatible with MobilityHelper::Install
   - bug 893 - Lazy CourseChange notification for WaypointMobilityModel
   - bug 979 - Multi-octet fields in Wi-Fi headers have wrong endianness
   - bug 984 - EmuNetDevice should use DIX encapsulation by default
   - bug 988 - MacRxMiddle::SequenceControlSmaller method
   - bug 993 - MinstrelWifiManager::UpdateStats useless if clause
   - bug 1015 - GetChannelFrequencyMhz() does not match with standard
   - bug 1022 - inappropriate ASSERT in tcp-socket-impl.cc
   - bug 1027 - RocketfuelTopologyReader is not working at all

Known issues
------------

Release 3.9
===========

Availability
------------